--- a/ui-prototype/src/components/MessageThread/MessageThread.css
+++ b/ui-prototype/src/components/MessageThread/MessageThread.css
@@ -8,7 +8,7 @@
   height: calc(100vh - 280px);
   display: flex;
   flex-direction: column;
-  z-index: 50;
+  z-index: 40;
 }
 
 .message-thread {
